--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     rtc.localStream = AgoraRTC.createStream({
                         streamID: rtc.params.uid,
                         audio: true,
-                        video: true,
+                        video: false,
                         screen: false,
                         microphoneId: option.microphoneId,
                         cameraId: option.cameraId
