--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
                             value: value,
                             kind: item.kind
                         })
+                        console.log('********************AUDIOS***********************')
+                        console.log(audios)
                     }
                 }
                 next({ videos: videos, audios: audios })
