--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             value: value,
                             kind: item.kind
                         })
-                        console.log('********************AUDIOS OUTPUT***********************')
+                        console.log('********************AUDIOS OUTPUT1***********************')
                         console.log(audioOutput)
                     }
                 }
