--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             kind: item.kind
                         })
 
-                        console.log('********************AUDIOS OUTPUT8***********************')
+                        console.log('********************AUDIOS OUTPUT9***********************')
                         console.log(audioOutput)
                     }
                 }
@@ -647,6 +647,6 @@
                     }
                 })
             })
-    </script>
+        } </script>
 
 </html>
